--- a/index.html
+++ b/index.html
@@ -364,26 +364,24 @@
       <div class="containingDocsSection col-md-6 col-12">
         <div class="docHeader">
           <h2 class="media-heading">
-            <i class="iconInHeader fa-regular fa-user"></i>
+            <i class="iconInHeader fa-solid fa-user"></i>
             User Guides
           </h2>
         </div>
         <div class="docSection">
           <div class="col-md-6 col-12">
-            <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
             <a class="docLinks" target="_blank" href="documentation/quickguide.html">Getting Started</a><br>
-            <a class="docLinks" target="_blank" href="documentation/modeling.html">Modeling Guide</a><br>
-            <a class="docLinks" target="_blank" href="documentation/meshing.html">Meshing Guide</a><br>
-            <a class="docLinks" target="_blank" href="documentation/flowsolver.html">Simulation Guide</a><br>
-            <a class="docLinks" target="_blank" href="documentation/svfsi.html">svFSI Guide</a><br>
+            <a class="docLinks" target="_blank" href="documentation/modeling.html">Modeling</a><br>
+            <a class="docLinks" target="_blank" href="documentation/meshing.html">Meshing</a><br>
+            <a class="docLinks" target="_blank" href="documentation/flowsolver.html">Simulation</a><br>
+            <a class="docLinks" target="_blank" href="documentation/svfsi.html">svFSI</a><br>
           </div>
           <div class="col-md-6 col-12">
-            <a class="docLinks" target="_blank" href="documentation/simcardio.html">SimCardio Guide</a><br>
-            <a class="docLinks" target="_blank" href="documentation/rom_simulation.html">ROM Simulation Guide</a><br>
-            <a class="docLinks" target="_blank" href="documentation/genbc.html">General B.C. Guide</a><br>
+            <a class="docLinks" target="_blank" href="documentation/simcardio.html">SimCardio</a><br>
+            <a class="docLinks" target="_blank" href="documentation/rom_simulation.html">ROM Simulation</a><br>
+            <a class="docLinks" target="_blank" href="documentation/genbc.html">General B.C.</a><br>
             <a class="docLinks" target="_blank" href="documentation/python_interface.html">Python Interface</a><br>
             <a class="docLinks" target="_blank" href="documentation/references.html">References</a><br>
-            <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
           </div>
         </div>
       </div>
@@ -397,14 +395,8 @@
           <a class="docLinks" target="_blank" href="clinical/coronary.html">Coronary Normal</a><br>
           <a class="docLinks" target="_blank" href="clinical/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
           <a class="docLinks" target="_blank" href="clinical/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
-          <a class="docLinks" target="_blank" href="clinical/pulmonary.html">Healthy Pulmonary</a>
-        </div>
-        <div class="docHeader ">
-          <h2 class="media-heading"><i class="iconInHeader fa-solid fa-laptop-code">
-          </i>Developer Guides</h2>
-        </div>
-        <div class="docSection">
-          <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Building SimVascular from Source</a>
+          <a class="docLinks" target="_blank" href="clinical/pulmonary.html">Healthy Pulmonary</a><br>
+          <a class="docLinks" target="_blank" href="https://simtk.org/projects/sv_tests">All Demo Projects</a>
         </div>
       </div>
     </div>    
