--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
   
     <div class="section">
-      <div style="margin-top: 15px" class="newSectionHeader">
+      <div class="newSectionHeader">
         <h1 id="capabilities">Its Capabilities</h1>
       </div>
       <div class="newSectionContent">
@@ -211,7 +211,7 @@
     </div>
 
     <div class="everyOtherSection">
-      <div style="margin-top: 15px" class="newSectionHeader">
+      <div class="newSectionHeader">
         <h1 id="applications">Suite of Applications</h1>
       </div>
       <div class="newSectionContent">
@@ -539,7 +539,7 @@
   </div>
 
   <div class="everyOtherSection">
-    <div style="margin-top: 15px" class="newSectionHeader">
+    <div class="newSectionHeader">
       <h1 id="gateway">Supercomputing Gateway</h1>
     </div>
     <div class="newSectionContent">
